--- a/src/app/pages/information/information.page.scss
+++ b/src/app/pages/information/information.page.scss
@@ -63,3 +63,34 @@
     font-weight: 300;
 }
 
+
+
+////// Slides
+
+.slider {
+    width: 100%;
+    position: -webkit-sticky;  // required for Safari
+    position: sticky;   
+    top: 0; // required as well.
+    z-index: 1;
+    margin-bottom: 20px;
+}
+
+
+.padre {
+    height: 100%;
+    //display: flex;
+    //flex-direction: column;
+}
+
+
+.sliderPrimero,
+.sliderHijo,
+.banner,
+.imgSlider {
+    width: 100%;
+}
+
+.lista {
+ //   overflow-y: scroll;
+}
