--- a/src/app/pages/where-eat/where-eat.page.html
+++ b/src/app/pages/where-eat/where-eat.page.html
@@ -9,9 +9,9 @@
 </ion-header>
 <ion-content>
     <div id="alto" class="slider">
-        <ion-slides class="sliderPrimero" scrollbar="false" pager="false" [options]="slideOpts">
+        <ion-slides *ngFor="let item of sliderDondeComer" class="sliderPrimero" scrollbar="false" pager="false" [options]="slideOpts">
             <ion-slide class="sliderHijo"> 
-                <img class="imgSlider" src="/assets/img/fachadaAmsj.jpg" />                
+                <img class="imgSlider" src="{{item.imagen}}" />                
             </ion-slide>            
         </ion-slides>
         <ion-searchbar cancelButtonText="Custom Cancel" placeholder="" (ionChange)="buscar($event)"></ion-searchbar>
