--- a/src/app/pages/information/information.page.html
+++ b/src/app/pages/information/information.page.html
@@ -9,8 +9,8 @@
 <ion-content>
     
     <div id="alto" class="slider">
-        <ion-slides *ngFor="let imagen of imagesSliderInfo" class="sliderPrimero" scrollbar="false" pager="false" [options]="slideOpts">
-            <ion-slide class="sliderHijo"> 
+        <ion-slides class="sliderPrimero" scrollbar="false" pager="false" [options]="slideOpts">
+            <ion-slide *ngFor="let imagen of imagesSliderInfo" class="sliderHijo"> 
                 <img class="imgSlider" src="{{imagen.imagen}}" />                
             </ion-slide>            
         </ion-slides>
