--- a/src/global.scss
+++ b/src/global.scss
@@ -41,3 +41,12 @@
    margin-left: 4%;
    margin-right: 4%;
 }
+
+.modal-accessibility .modal-wrapper {
+   display: flex;
+   flex-direction: column;
+   justify-content: space-between;
+   height: 40%;
+   margin-left: 4%;
+   margin-right: 4%;
+}
