eventos - avance inicial

--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -59,8 +59,8 @@
                     </a>
                 </div>
                 <div class="icono">
-                    <a class="iconMenu" routerLink="/where-sleep">
-                        <ion-img src="/assets/icon/dormir.png"></ion-img>
+                    <a class="iconMenu" routerLink="/events">
+                        <ion-img src="/assets/icon/eventos.png"></ion-img>
                     </a>
                 </div>
                 <div class="icono">
