pages eventos (avances)

--- a/src/app/pages/accessibility/accessibility.page.html
+++ b/src/app/pages/accessibility/accessibility.page.html
@@ -7,7 +7,7 @@
     </ion-item>
     <ion-item>
       <i class="fas fa-toilet" slot="end"></i>
-      <ion-label>Baños públicos</ion-label>
+      <ion-label>Baños</ion-label>
     </ion-item>
     <ion-item>
       <i class="fas fa-wheelchair" slot="end"></i>
