--- a/src/app/pages/events/events.page.html
+++ b/src/app/pages/events/events.page.html
@@ -1,16 +1,17 @@
 <ion-header>
   <ion-toolbar color="information">
     <ion-buttons slot="start">
-        <ion-back-button defaultHref="/" color="back"></ion-back-button>
+      <ion-back-button defaultHref="/" color="back"></ion-back-button>
     </ion-buttons>
     <ion-img slot="start" src="/assets/icon/eventos.png"></ion-img>
     <ion-title>Eventos</ion-title>
-</ion-toolbar>
+  </ion-toolbar>
 </ion-header>
 
 <ion-content>
   <div class="location">
-    <i class="fas fa-map-marker-alt"></i> <select>
+    <i class="fas fa-map-marker-alt"></i>
+    <select>
       <option value="San José">San José</option>
       <option value="Colonia">Colonia</option>
     </select>
@@ -31,25 +32,113 @@
   <div class="events">
     <div class="event">
       <div class="image-event">
-        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTywzs2Ti8Vw_sqRF1PhObYUTz5Xbv9NOAyTQ&usqp=CAU" alt="">
+        <img
+          src="https://tickantel.cdn.antel.net.uy/media/Espectaculo/40009840/Banner.png"
+          alt=""
+        />
       </div>
       <div class="info-event">
-        <div>Lun, Set 13</div>
-        <div>Evento 1</div>
-        <div>Descripción...</div>
+        <div class="fecha">Sáb, Set 18</div>
+        <div class="titulo">Cuatro Pesos de Propina</div>
+        <div class="descripcion">
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eaque
+          necessitatibus ducimus eius. Tenetur, illum possimus nam, cum corporis
+          aperiam ad sint natus commodi unde, iusto placeat dolor culpa iure
+          quaerat?
+        </div>
       </div>
     </div>
     <div class="event">
       <div class="image-event">
-        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTywzs2Ti8Vw_sqRF1PhObYUTz5Xbv9NOAyTQ&usqp=CAU" alt="">
+        <img
+          src="https://tickantel.cdn.antel.net.uy/media/Espectaculo/40009958/Banner.png"
+          alt=""
+        />
       </div>
       <div class="info-event">
-        <div>Lun, Set 13</div>
-        <div>Evento 1</div>
-        <div>Descripción...</div>
+        <div class="fecha">Dom, Oct 31</div>
+        <div class="titulo">Copla Alta</div>
+        <div class="descripcion">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet
+          delectus, ratione eum fuga fugiat tempore doloribus vero inventore
+          error. Libero nisi facere assumenda deleniti expedita possimus rem id
+          atque distinctio!
+        </div>
+      </div>
+    </div>
+
+    <div class="event">
+      <div class="image-event">
+        <img
+          src="https://tickantel.cdn.antel.net.uy/media/Espectaculo/40009769/TickantelBanner.png"
+          alt=""
+        />
+      </div>
+      <div class="info-event">
+        <div class="fecha">Mié, Nov 10</div>
+        <div class="titulo">Facundo Arana - En el Aire</div>
+        <div class="descripcion">
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eaque
+          necessitatibus ducimus eius. Tenetur, illum possimus nam, cum corporis
+          aperiam ad sint natus commodi unde, iusto placeat dolor culpa iure
+          quaerat?
+        </div>
+      </div>
+    </div>
+    <div class="event">
+      <div class="image-event">
+        <img
+          src="https://tickantel.cdn.antel.net.uy/media/Espectaculo/40009960/Banner.png"
+          alt=""
+        />
+      </div>
+      <div class="info-event">
+        <div class="fecha">Jue, Oct 28</div>
+        <div class="titulo">Marcel Keoroglian</div>
+        <div class="descripcion">
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eaque
+          necessitatibus ducimus eius. Tenetur, illum possimus nam, cum corporis
+          aperiam ad sint natus commodi unde, iusto placeat dolor culpa iure
+          quaerat?
+        </div>
+      </div>
+    </div>
+    <div class="event">
+      <div class="image-event">
+        <img
+          src="https://tickantel.cdn.antel.net.uy/media/Espectaculo/40009958/Banner.png"
+          alt=""
+        />
+      </div>
+      <div class="info-event">
+        <div class="fecha">Dom, Oct 31</div>
+        <div class="titulo">Copla Alta</div>
+        <div class="descripcion">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet
+          delectus, ratione eum fuga fugiat tempore doloribus vero inventore
+          error. Libero nisi facere assumenda deleniti expedita possimus rem id
+          atque distinctio!
+        </div>
+      </div>
+    </div>
+
+    <div class="event">
+      <div class="image-event">
+        <img
+          src="https://tickantel.cdn.antel.net.uy/media/Espectaculo/40009769/TickantelBanner.png"
+          alt=""
+        />
+      </div>
+      <div class="info-event">
+        <div class="fecha">Mié, Nov 10</div>
+        <div class="titulo">Facundo Arana - En el Aire</div>
+        <div class="descripcion">
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eaque
+          necessitatibus ducimus eius. Tenetur, illum possimus nam, cum corporis
+          aperiam ad sint natus commodi unde, iusto placeat dolor culpa iure
+          quaerat?
+        </div>
       </div>
     </div>
   </div>
-  
-  
 </ion-content>
