--- a/src/app/pages/modal-info/modal-info.page.html
+++ b/src/app/pages/modal-info/modal-info.page.html
@@ -14,7 +14,7 @@
 </ion-header>
 <ion-content>
     <ion-text>
-        <div class="texto" [innerHTML]="descripcion">
+        <div class="texto" id="all-description" [innerHTML]="descripcion">
         </div>
     </ion-text>
     <ion-grid>
