--- a/src/app/pages/where-eat/where-eat.page.html
+++ b/src/app/pages/where-eat/where-eat.page.html
@@ -27,10 +27,10 @@
                 </div>
                 <div class="info">
                     <ion-label>
-                        <h2>{{ item.nombre }}</h2>
+                        <h2 id="eat-info">{{ item.nombre }}</h2>
                         <div class="infoAbajo">
-                            <h3>{{ item.direccion }}</h3>
-                            <p><span>Tel: </span>{{ item.telefono }}</p>
+                            <h3 id="eat-info">{{ item.direccion }}</h3>
+                            <p id="eat-info"><span id="eat-info">Tel: </span>{{ item.telefono }}</p>
                         </div>
                     </ion-label>
                 </div>
