--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div *ngIf="showSplash" class="splash">
 	<div class="spinner"></div>
-	<p>Cargando...</p>
+	<p class="inicial-load">Cargando...</p>
 </div>
 
 <ion-app mode="md">
