--- a/src/app/pages/circuits/circuits.page.html
+++ b/src/app/pages/circuits/circuits.page.html
@@ -9,7 +9,7 @@
 <ion-content>
     <ion-searchbar cancelButtonText="Custom Cancel" placeholder="¡Elegí tu itinerario!" (ionChange)="buscar($event)"></ion-searchbar>
     <ion-card *ngFor="let item of tipoCircuito | filtroTipoCircuito:textoBuscar" routerLink="/{{item.nombre}}">
-        <ion-card-header color="information">
+        <ion-card-header color="information" id="circuit-title">
             {{ item.nombre }} <span>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;</span> {{item.ciudad}}
         </ion-card-header>
         <ion-card-content>
@@ -20,7 +20,7 @@
         </ion-card-content>
     </ion-card>
     <ion-card *ngFor="let item of lugaresRurales | filtroTipoCircuito:textoBuscar" [routerLink]="['/places', item.$key]">
-        <ion-card-header color="options">
+        <ion-card-header color="options" id="circuit-title">
             Rural &nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp; {{ item.nombre }}
         </ion-card-header>
         <ion-card-content>
