--- a/src/app/pages/events/events.page.scss
+++ b/src/app/pages/events/events.page.scss
@@ -1,109 +1,144 @@
 .sc-ion-searchbar-md-h {
-    --box-shadow: none !important;
-    padding: 0px !important;
-    border-bottom: 1px solid grey !important;
+  --box-shadow: none !important;
+  padding: 0px !important;
+  border-bottom: 1px solid grey !important;
 }
 
 ::-webkit-scrollbar {
-    display: none;
+  display: none;
 }
 
 ion-img {
-    width: 12%;
-    margin-left: 4px;
+  width: 12%;
+  margin-left: 4px;
 }
 
 ion-title {
-    color: #fff;
-    font-weight: 700;
+  color: #fff;
+  font-weight: 700;
 }
 
-ion-select, ion-searchbar {
-    /* Applies to the value and placeholder color */
-    color: #000000;
-  
-    /* Set a different placeholder color */
-    --placeholder-color: #585454bb;
-  
-    /* Set full opacity on the placeholder */
-    --placeholder-opacity: 1;
-  }
+ion-select,
+ion-searchbar {
+  /* Applies to the value and placeholder color */
+  color: #000000;
+
+  /* Set a different placeholder color */
+  --placeholder-color: #585454bb;
+
+  /* Set full opacity on the placeholder */
+  --placeholder-opacity: 1;
+}
 
 .container {
-    display: flex;
-    flex-direction: column;
-    margin: 0 5%;
-    justify-content: center;
+  display: flex;
+  flex-direction: column;
+  margin: 0 5%;
+  justify-content: center;
 }
 
 .location {
-    margin: 10px 0;
-    width: 100%;
+  margin: 10px 0;
+  width: 100%;
 }
 
 .filter {
-    margin-top: 10px;
-    display: flex;
-    flex-direction: row;
-    overflow-x: auto;
-    -webkit-overflow-scrolling: touch;
-    -ms-overflow-style: -ms-autohiding-scrollbar; 
+  margin-top: 10px;
+  display: flex;
+  flex-direction: row;
+  overflow-x: auto;
+  -webkit-overflow-scrolling: touch;
+  -ms-overflow-style: -ms-autohiding-scrollbar;
 }
 
 ion-chip {
-    flex: 0 0 auto; 
-    margin-left: 0px !important;
+  flex: 0 0 auto;
+  margin-left: 0px !important;
 }
 
 .event {
-    display: flex;
-    flex-direction: row;
-    margin: 0;
+  display: flex;
+  flex-direction: row;
+  margin: 0;
 }
 
 .image-event {
-    width: 42%;
-    height: auto;
+  width: 42%;
+  height: auto;
 }
 
 .info-event {
-    width: 55%;
-    margin-left: 3%;
+  width: 55%;
+  margin-left: 3%;
 }
 
 .info-event > div {
-    margin: 0 0 2% 5%;
-    white-space: nowrap;
-    text-overflow: ellipsis;
-    overflow: hidden;
+  margin: 0 0 2% 3%;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
 }
 
 .fecha {
-    font-weight: bold;
-    color: #e76c2e;
-    font-size: 0.9em;
+  font-weight: bold;
+  color: #e76c2e;
+  font-size: 0.7em;
 }
 
 .titulo {
-    font-weight: bold;
-    font-size: 1em;
+  font-weight: bold;
+  font-size: 1em;
 }
 
 .descripcion {
-    font-size: 0.8em;
+  font-size: 0.8em;
 }
 
-.img-elem{
-    width: 100%;
-    height: auto;
-    border-radius: 5%;
-    margin: 0px;
-    -webkit-box-shadow: 0px 0px 4px 2px rgba(0, 0, 0, 0.28);
-    -moz-box-shadow: 0px 0px 4px 2px rgba(0, 0, 0, 0.28);
-    box-shadow: 0px 0px 4px 2px rgba(0, 0, 0, 0.28);
+.img-elem {
+  width: 100%;
+  height: 80px;
+  object-fit: cover;
+  border-radius: 5%;
+  margin: 0px;
+  -webkit-box-shadow: 0px 0px 4px 2px rgba(0, 0, 0, 0.28);
+  -moz-box-shadow: 0px 0px 4px 2px rgba(0, 0, 0, 0.28);
+  box-shadow: 0px 0px 4px 2px rgba(0, 0, 0, 0.28);
 }
 
 .event > .info-event {
-    align-self: flex-start;
-    margin-top: 8px;
+  align-self: flex-start;
+  margin-top: 8px;
+}
+
+.slider {
+  width: 100%;
+  position: -webkit-sticky; // required for Safari
+  position: sticky;
+  top: 0; // required as well.
+  z-index: 10;
+  margin-bottom: 5px;
+}
+
+.sliderPrimero,
+.sliderHijo,
+.banner,
+.imgSlider {
+  width: 100%;
+}
+
+* {
+  z-index: 0;
+}
+
+.filter {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 0;
+  z-index: 10;
+  background-color: #fff;
+}
+
+.list-md {
+  padding-top: 0 !important;
 }
