--- a/src/app/pages/information/information.page.html
+++ b/src/app/pages/information/information.page.html
@@ -32,12 +32,12 @@
                     </ion-item>
                     <ion-list *ngIf="location.nameLocalidad && location.open" class="info-list" lines="none">
                         <ion-list class="lugares" *ngFor="let info of location.children">
-                            <ion-label><i class="fas fa-caret-right"></i>&nbsp;&nbsp;{{ info.info }}&nbsp; {{ info.number }}</ion-label>
+                            <ion-label class="info-detail"><i class="fas fa-caret-right"></i>&nbsp;&nbsp;{{ info.info }}&nbsp; {{ info.number }}</ion-label>
                         </ion-list>
                     </ion-list>
                 </ion-list>
             </div>
-            <p *ngIf="item.children.length == 0 && item.open" text-center>No existen números aquí</p>
+            <p *ngIf="item.children.length == 0 && item.open" text-center class="no-exist">No existen números aquí</p>
         </ion-list>
     </div>
     
