--- a/src/app/pages/where-sleep/where-sleep.page.html
+++ b/src/app/pages/where-sleep/where-sleep.page.html
@@ -19,10 +19,10 @@
                 </div>
                 <div class="info">
                     <ion-label>
-                        <h2>{{ item.nombre }}</h2>
+                        <h2 id="sleep-info">{{ item.nombre }}</h2>
                         <div class="infoAbajo">
-                            <h3>{{ item.direccion }}</h3>
-                            <p><span>Tel: </span>{{ item.telefono }}</p>
+                            <h3 id="sleep-info">{{ item.direccion }}</h3>
+                            <p id="sleep-info"><span id="sleep-info">Tel: </span>{{ item.telefono }}</p>
                         </div>
                     </ion-label>
                 </div>
