--- a/src/global.scss
+++ b/src/global.scss
@@ -51,3 +51,11 @@
    margin-right: 4%;
    //border-radius: 10px;
 }
+
+.modal-event .modal-wrapper {
+   //height: 95vh;
+   display: block; 
+   //margin-left: 4%;
+   //margin-right: 4%;
+   //border-radius: 10px;
+}
