--- a/src/app/pages/events/events.page.scss
+++ b/src/app/pages/events/events.page.scss
@@ -116,7 +116,6 @@ ion-chip {
   position: sticky;
   top: 0; // required as well.
   z-index: 10;
-  margin-bottom: 5px;
 }
 
 .sliderPrimero,
@@ -131,10 +130,8 @@ ion-chip {
 }
 
 .filter {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-top: 0;
+  margin: 0 0 0 4%;
+  padding-top: 5px;
   z-index: 10;
   background-color: #fff;
 }
