--- a/src/global.scss
+++ b/src/global.scss
@@ -59,3 +59,15 @@
    //margin-right: 4%;
    //border-radius: 10px;
 }
+
+.filterModal .modal-wrapper {
+   height: 75%;
+   margin: auto 4%;
+   border-radius: 10px;
+}
+
+.filterModal {
+   ion-backdrop {
+     --backdrop-opacity: 0.5;
+   }
+ }
